# micro-maya-usd

./: .gitignore  CMakeLists.txt  README.md
forms/: mainwindow.ui
glsl/: lambert.frag.glsl
resources/glsl/: skeleton.frag.glsl  skeleton.vert.glsl
src/: CMakeLists.txt  camera.cpp  camera.h  cameracontrolshelp.cpp  cameracontrolshelp.h  drawable.cpp  drawable.h  la.cpp  la.h  main.cpp  mainwindow.cpp  mainwindow.h  mygl.cpp  mygl.h  openglcontext.cpp  openglcontext.h  shaderprogram.cpp  shaderprogram.h  utils.cpp  utils.h
src/meshdata/: CMakeLists.txt  face.cpp  face.h  halfedge.cpp  halfedge.h  vertex.cpp  vertex.h
src/scene/: CMakeLists.txt  mesh.cpp  mesh.h  squareplane.cpp  squareplane.h
src/scene/wire/: CMakeLists.txt  wireedge.cpp  wireedge.h  wireface.cpp  wireface.h  wirevertex.cpp  wirevertex.h
src/skeletondata/: CMakeLists.txt  joint.cpp  joint.h
